2008-08-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* docs/plugins/inspect/plugin-1394.xml:
	Whoops, forgot one doc file for people who can't/don't build the
	raw1394 plugin.

2008-08-12  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/inspect/plugin-cdio.xml:
	* ext/Makefile.am:
	* ext/cdio/Makefile.am:
	* ext/cdio/gstcdio.c:
	* ext/cdio/gstcdio.h:
	* ext/cdio/gstcdiocddasrc.c:
	* ext/cdio/gstcdiocddasrc.h:

	Pull changes from 0.10.9.2 pre-release branch moving the libcdio
	CDDA source to -ugly.

	* po/LINGUAS:
	* po/POTFILES.in:
	* po/id.po:
	Pull in new translation from 0.10.9.2 release branch.

2008-08-11  Edward Hervey  <edward.hervey@collabora.co.uk>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* docs/plugins/gst-plugins-good-plugins.interfaces:
	Integrate documentation for new hdv1394src element.

2008-08-11  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/raw1394/Makefile.am:
	* ext/raw1394/gst1394.c: (plugin_init):
	* ext/raw1394/gsthdv1394src.c: (_do_init),
	(gst_hdv1394src_base_init), (gst_hdv1394src_class_init),
	(gst_hdv1394src_init), (gst_hdv1394src_dispose),
	(gst_hdv1394src_set_property), (gst_hdv1394src_get_property),
	(gst_hdv1394src_from_raw1394handle),
	(gst_hdv1394src_iec61883_receive), (gst_hdv1394src_bus_reset),
	(gst_hdv1394src_create), (gst_hdv1394src_discover_avc_node),
	(gst_hdv1394src_start), (gst_hdv1394src_stop),
	(gst_hdv1394src_unlock), (gst_hdv1394src_update_device_name),
	(gst_hdv1394src_uri_get_type), (gst_hdv1394src_uri_get_protocols),
	(gst_hdv1394src_uri_get_uri), (gst_hdv1394src_uri_set_uri),
	(gst_hdv1394src_uri_handler_init):
	* ext/raw1394/gsthdv1394src.h: