@@ -1,5 +1,14 @@
 2008-08-12  Edward Hervey  <edward.hervey@collabora.co.uk>
 
+	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_query):
+	Add warning messages stating exactly why the latency query failed.
+	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_set_capture):
+	In some cases, the negotiated framerate might be the default one which
+	is already set internally. But we still need to mark it down in fps_n
+	and fps_d so that the latency query can happen properly.
+
+2008-08-12  Edward Hervey  <edward.hervey@collabora.co.uk>
+
 	* docs/plugins/inspect/plugin-1394.xml:
 	Whoops, forgot one doc file for people who can't/don't build the
 	raw1394 plugin.
